crates/elm-client-gen-derive-tests/tests/compile_fail/multi_field_tuple_struct.rs
use elm_client_gen_core::ElmType;

#[derive(ElmType)]
#[elm(module = "Api.Pair")]
pub struct Pair(String, i32);

fn main() {}
